--- a/src/i18n/locales/Home/Reservation.json
+++ b/src/i18n/locales/Home/Reservation.json
@@ -4,7 +4,7 @@
         "lunch":"Lunch",
         "dinner":"Dinner",
         "button":"For Reservations or Any Inqueries",
-        "warning":"*To make sure all the customers have enough personal space, we are admitting limited number of guests. Please make reservation ahead of time. In order to serve Course A, B and C, Please kindly make reservation by the day before your visit. For your timely information, such as temporary close and private event, please refer to SNS."
+        "warning":"*To make sure all the customers have enough personal space, we are admitting limited number of guests. Please make reservation ahead of time. In order to serve Course A, B and C, Please kindly make reservation by the day before your visit. For your timely information, such as temporary close and private event, please refer to Socials."
     },
     "ja": {
         "timeTitle":"営業時間:",
