--- a/src/i18n/locales/Menu.json
+++ b/src/i18n/locales/Menu.json
@@ -4,7 +4,7 @@
         "warning":"(incl. tax, no service charge)",
         "basic":{
             "soba":"Shinshu Azumino Soba",
-            "chooseMain":"Choosing a Main Dish",
+            "chooseMain":"Main Dish",
             "chooseFrom3":"(Choose from the 3 choices below)",
             "choose3":"(Choose from the 3 choices below)",
             "choose2":"(Choose from the 2 choices bdlow)",
@@ -14,7 +14,7 @@
             "plus550":"(+550 yen)"
         },
         "course":{
-            "amuse" : "Amusement",
+            "amuse" : "Amuse-bouche",
             "dessert" :"Dessert  (a choice from 3)",
             "appetizer":"Appetizer: Seafood Marinade with remudore sauce",
             "drink":"Coffee/Tea"
@@ -33,7 +33,7 @@
             "soup":"Seasonal Soup",
             "main1":"Seasonal Fish Poiret",
             "main2":"Stewed Beef Cheek in Red Wine sauce",
-            "main3":"Wagyu Beef Filet Steak (+1800 yen)"
+            "main3":"Wagyu Beef Filet Steak with white sauce (+1800 yen)"
         },
         "c" : {
             "title": "C Course",
@@ -43,20 +43,20 @@
             "main1":"Fish Dish: Seasonal Fish Poiret",
             "main2":"Meat Dish: Stewed Beef Cheek in Red Wine sauce",
             "or":"or",
-            "main3":"Wagyu Beef Filet Steak (+1800 yen)"
+            "main3":"Wagyu Beef Filet Steak white sauce  (+1800 yen)"
             
         },
         "lunch" : {
             "title": "Lunch Set",
-            "titleEtc" :"( Only during Lunch Time )",
-            "soupAndSalad":"Seasonal Soup & mini Salad",
+            "titleEtc" :"( Lunch Time Only )",
+            "soupAndSalad":"Seasonal Soup & Mini Salad",
             "mainTitle":"Main Dish Selection",
             "main1":"Today's Seafood",
             "main2":"Cream stewed Chicken and Mushroom",
-            "main3":"Cabbage Rolls Gratin with Tomato source",
-            "main3Title":"Popular and original Seta-tei dish",
+            "main3":"Cabbage Rolls Gratin with Tomato Sauce",
+            "main3Title":"Popular and Original Seta-tei Dish",
             "sourbet":"Seasonal Sorbet",
-            "dessertTitle":"dessert can be upgraded with +￥450 ",
+            "dessertTitle":"Dessert can be upgraded with +￥450 ",
             "dessertChoose":"( Choose one from below )",
             "dessertAndDrink":"Course dessert and drink set",
             "drinks":"Coffee, Black Tea, Herb Tea"
